# oneshot

./: Cargo.toml  README.md
benches/: oneshot.rs
src/: lib.rs
tests/: oneshot.rs
